# 3D-SLS-Printing

3d/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Mathematics.h  MyArea2.cpp  MyArea2.h  Obj3DModel.cpp  Obj3DModel.h  Polygons.cpp  Polygons.h  Primitives.h  SliceWindow.cpp  SliceWindow.h  a.txt  loginWindow.cpp  loginWindow.h  main.cpp  main_auth.cpp  main_gui.cpp  main_slice.cpp  myarea.cpp  myarea.h  stlParser.cpp  stlParser.h
